deployPhotoApp/k8s-backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-service
  template:
    metadata:
      labels:
        app: backend-service
    spec:
      containers:
      - name: backend-service
        image: registry.cloud.rennes.enst-bretagne.fr:5000/backend-service_03:latest
        ports:
        - containerPort: 8070
