deployPhotoApp/k8s-backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  ports:
  - port: 8070
    protocol: TCP
  selector:
    app: backend-service
