deployPhotoApp/k8s-mongo-outside-k8s-service.yml
kind: Service
apiVersion: v1
metadata:
  name: mongo1
spec:
  ports:
  - name: mongo1
    protocol: TCP
    port: 27017
---
apiVersion: v1
kind: Endpoints
metadata:
  name: mongo1
subsets:
- addresses:
  - ip: 192.168.2.3
  ports:
  - port: 27017
    name: mongo1
---
kind: Service
apiVersion: v1
metadata:
  name: mongo2
spec:
  ports:
  - name: mongo2
    protocol: TCP
    port: 27017
---
apiVersion: v1
kind: Endpoints
metadata:
  name: mongo2
subsets:
- addresses:
  - ip: 192.168.2.4
  ports:
  - port: 27017
    name: mongo2
---
kind: Service
apiVersion: v1
metadata:
  name: mongo3
spec:
  ports:
  - name: mongo3
    protocol: TCP
    port: 27017
---
apiVersion: v1
kind: Endpoints
metadata:
  name: mongo3
subsets:
- addresses:
  - ip: 192.168.2.5
  ports:
  - port: 27017
    name: mongo3
