deployPhotoApp/k8s-photo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: photo-service
spec:
  ports:
  - port: 8091
    protocol: TCP
  selector:
    app: photo-service
